--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
             <h2 id="results">0.00</h2>
         </div>
         <div class="buttons-container">
-            <div id="ac">AC</div>
-            <div id="divide">/</div>
-            <div id="seven">7</div>
-            <div id="eight">8</div>
-            <div id="nine">9</div>
-            <div id="multiply">X</div>
-            <div id="four">4</div>
-            <div id="five">5</div>
-            <div id="six">6</div>
-            <div id="minus">-</div>
-            <div id="one">1</div>
-            <div id="two">2</div>
-            <div id="three">3</div>
-            <div id="plus">+</div>
-            <div id="zero">0</div>
-            <div id="decimal">.</div>
-            <div id="equals">=</div>
+            <div id="ac" class="click">AC</div>
+            <div id="divide" class="click">/</div>
+            <div id="seven" class="click">7</div>
+            <div id="eight" class="click">8</div>
+            <div id="nine" class="click">9</div>
+            <div id="multiply" class="click">X</div>
+            <div id="four" class="click">4</div>
+            <div id="five" class="click">5</div>
+            <div id="six" class="click">6</div>
+            <div id="minus" class="click">-</div>
+            <div id="one" class="click">1</div>
+            <div id="two" class="click">2</div>
+            <div id="three" class="click">3</div>
+            <div id="plus" class="click">+</div>
+            <div id="zero" class="click">0</div>
+            <div id="decimal" class="click">.</div>
+            <div id="equals" class="click">=</div>
         </div>
     </container>
     
