add operate function

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
         <div class="buttons-container">
             <div id="ac" class="click">AC</div>
             <div id="divide" class="click">/</div>
-            <div id="seven" class="click">7</div>
-            <div id="eight" class="click">8</div>
-            <div id="nine" class="click">9</div>
+            <div id="seven" class="click" name="7">7</div>
+            <div id="eight" class="click" name="8">8</div>
+            <div id="nine" class="click" name="9">9</div>
             <div id="multiply" class="click">X</div>
-            <div id="four" class="click">4</div>
-            <div id="five" class="click">5</div>
-            <div id="six" class="click">6</div>
+            <div id="four" class="click" name="4">4</div>
+            <div id="five" class="click" name="5">5</div>
+            <div id="six" class="click" name="6">6</div>
             <div id="minus" class="click">-</div>
-            <div id="one" class="click">1</div>
-            <div id="two" class="click">2</div>
-            <div id="three" class="click">3</div>
+            <div id="one" class="click" name="1">1</div>
+            <div id="two" class="click" name="2">2</div>
+            <div id="three" class="click" name="3">3</div>
             <div id="plus" class="click">+</div>
-            <div id="zero" class="click">0</div>
+            <div id="zero" class="click" name="0">0</div>
             <div id="decimal" class="click">.</div>
             <div id="equals" class="click">=</div>
         </div>
