change divs to buttons and add values

--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
             <h2 id="display"></h2>
         </div>
         <div class="buttons-container">
-            <div id="ac" class="buttons">AC</div>
-            <div id="divide" class="buttons" data-value="/">/</div>
-            <div id="seven" class="buttons" data-value="7">7</div>
-            <div id="eight" class="buttons" data-value="8">8</div>
-            <div id="nine" class="buttons" data-value="9">9</div>
-            <div id="multiply" class="buttons" data-value="*">X</div>
-            <div id="four" class="buttons" data-value="4">4</div>
-            <div id="five" class="buttons" data-value="5">5</div>
-            <div id="six" class="buttons" data-value="6">6</div>
-            <div id="minus" class="buttons" data-value="-">-</div>
-            <div id="one" class="buttons" data-value="1">1</div>
-            <div id="two" class="buttons" data-value="2">2</div>
-            <div id="three" class="buttons" data-value="3">3</div>
-            <div id="plus" class="buttons" data-value="+">+</div>
-            <div id="zero" class="buttons" data-value="0">0</div>
-            <div id="decimal" class="buttons" data-value=".">.</div>
-            <div id="equals" class="buttons">=</div>
+            <div> <button id="ac" class="buttons">AC</button> </div>
+            <div> <button id="divide" class="buttons" value="/">/</button></div>
+            <div> <button id="seven" class="buttons" value="7">7</button></div>
+            <div> <button id="eight" class="buttons" value="8">8</button></div>
+            <div> <button id="nine" class="buttons" value="9">9</button></div>
+            <div> <button id="multiply" class="buttons" value="*">X</button></div>
+            <div> <button id="four" class="buttons" value="4">4</button></div>
+            <div> <button id="five" class="buttons" value="5">5</button></div>
+            <div> <button id="six" class="buttons" value="6">6</button></div>
+            <div> <button id="minus" class="buttons" value="-">-</button></div>
+            <div> <button id="one" class="buttons" value="1">1</button></div>
+            <div> <button id="two" class="buttons" value="2">2</button></div>
+            <div> <button id="three" class="buttons" value="3">3</button></div>
+            <div> <button id="plus" class="buttons" value="+">+</button></div>
+            <div> <button id="zero" class="buttons" value="0">0</button></div>
+            <div> <button id="decimal" class="buttons" value=".">.</button></div>
+            <div> <button id="equals" class="buttons">=</button></div>
         </div>
     </container>
     
