--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
             <h2 id="display"></h2>
         </div>
         <div class="buttons-container">
-            <div> <button id="ac" class="buttons">AC</button> </div>
-            <div> <button id="divide" class="buttons" value="/">/</button></div>
-            <div> <button id="seven" class="buttons" value="7">7</button></div>
-            <div> <button id="eight" class="buttons" value="8">8</button></div>
-            <div> <button id="nine" class="buttons" value="9">9</button></div>
-            <div> <button id="multiply" class="buttons" value="*">X</button></div>
-            <div> <button id="four" class="buttons" value="4">4</button></div>
-            <div> <button id="five" class="buttons" value="5">5</button></div>
-            <div> <button id="six" class="buttons" value="6">6</button></div>
-            <div> <button id="minus" class="buttons" value="-">-</button></div>
-            <div> <button id="one" class="buttons" value="1">1</button></div>
-            <div> <button id="two" class="buttons" value="2">2</button></div>
-            <div> <button id="three" class="buttons" value="3">3</button></div>
-            <div> <button id="plus" class="buttons" value="+">+</button></div>
-            <div> <button id="zero" class="buttons" value="0">0</button></div>
-            <div> <button id="decimal" class="buttons" value=".">.</button></div>
-            <div> <button id="equals" class="buttons">=</button></div>
+            <div id="ac"> <button  class="buttons">AC</button> </div>
+            <div id="divide"> <button  class="buttons" value="/">/</button></div>
+            <div id="seven"> <button  class="buttons" value="7">7</button></div>
+            <div id="eight"> <button  class="buttons" value="8">8</button></div>
+            <div id="nine"> <button  class="buttons" value="9">9</button></div>
+            <div id="multiply"> <button  class="buttons" value="*">X</button></div>
+            <div id="four"> <button  class="buttons" value="4">4</button></div>
+            <div id="five"> <button  class="buttons" value="5">5</button></div>
+            <div id="six"> <button  class="buttons" value="6">6</button></div>
+            <div id="minus"> <button  class="buttons" value="-">-</button></div>
+            <div id="one"> <button  class="buttons" value="1">1</button></div>
+            <div id="two"> <button  class="buttons" value="2">2</button></div>
+            <div id="three"> <button  class="buttons" value="3">3</button></div>
+            <div id="plus"> <button  class="buttons" value="+">+</button></div>
+            <div id="zero"> <button  class="buttons" value="0">0</button></div>
+            <div id="decimal"> <button  class="buttons" value=".">.</button></div>
+            <div id="equals"> <button  class="buttons" value="=">=</button></div>
         </div>
     </container>
     
