--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
         </div>
         <div class="buttons-container">
             <div id="ac"> <button  class="buttons">AC</button> </div>
-            <div id="divide"> <button  class="buttons" value="/">/</button></div>
+            <div id="divide"> <button  class="buttons mathButtons" value="/">/</button></div>
             <div id="seven"> <button  class="buttons numButtons" value="7">7</button></div>
             <div id="eight"> <button  class="buttons numButtons" value="8">8</button></div>
             <div id="nine"> <button  class="buttons numButtons" value="9">9</button></div>
-            <div id="multiply"> <button  class="buttons" value="*">X</button></div>
+            <div id="multiply"> <button  class="buttons mathButtons" value="*">X</button></div>
             <div id="four"> <button  class="buttons numButtons" value="4">4</button></div>
             <div id="five"> <button  class="buttons numButtons" value="5">5</button></div>
             <div id="six"> <button  class="buttons numButtons" value="6">6</button></div>
-            <div id="minus"> <button  class="buttons" value="-">-</button></div>
+            <div id="minus"> <button  class="buttons mathButtons" value="-">-</button></div>
             <div id="one"> <button  class="buttons numButtons" value="1">1</button></div>
             <div id="two"> <button  class="buttons numButtons" value="2">2</button></div>
             <div id="three"> <button  class="buttons numButtons" value="3">3</button></div>
-            <div id="plus"> <button  class="buttons" value="+">+</button></div>
+            <div id="plus"> <button  class="buttons mathButtons" value="+">+</button></div>
             <div id="zero"> <button  class="buttons numButtons" value="0">0</button></div>
-            <div id="decimal"> <button  class="buttons" value=".">.</button></div>
-            <div id="equals"> <button  class="buttons" value="=">=</button></div>
+            <div id="decimal"> <button  class="buttons numButtons" value=".">.</button></div>
+            <div id="equals"> <button  class="buttons" id="equalsButton" value="=">=</button></div>
         </div>
     </container>
     
