--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>calculator</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" type="text/css" href="./style.css">
     </head>
     <body>
     
@@ -38,6 +38,6 @@
         </div>
     </container>
     
-    <script src="/script.js" async defer></script>
+    <script type="text/javascript" src="./script.js" async defer></script>
     </body>
 </html>
